unpackaged/main/default/objects/IdeaFinancialAPISettings__c/IdeaFinancialAPISettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>IdeaFinancialAPISettings</label>
</CustomObject>