unpackaged/main/default/objects/IdeaFinancialAPISettings__c/fields/ApiPassword__c.field-meta.xml
<CustomField>
    <fullName>ApiPassword__c</fullName>
    <label>ApiPassword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>