unpackaged/main/default/objects/IdeaFinancialAPISettings__c/fields/ApiUserId__c.field-meta.xml
<CustomField>
    <fullName>ApiUserId__c</fullName>
    <label>ApiUserId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>