unpackaged/main/default/objects/IdeaFinancialAPISettings__c/fields/BrokerId__c.field-meta.xml
<CustomField>
    <fullName>BrokerId__c</fullName>
    <label>BrokerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>