unpackaged/main/default/objects/IdeaFinancialAPISettings__c/fields/Idea_Funder_Id__c.field-meta.xml
<CustomField>
    <fullName>Idea_Funder_Id__c</fullName>
    <label>Idea Funder Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>