unpackaged/main/default/objects/IdeaFinancialAPISettings__c/fields/Is_Staging__c.field-meta.xml
<CustomField>
    <fullName>Is_Staging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Staging</label>
    <type>Checkbox</type>
</CustomField>