unpackaged/main/default/objects/IdeaFinancialAPISettings__c/fields/StagingBrokerId__c.field-meta.xml
<CustomField>
    <fullName>StagingBrokerId__c</fullName>
    <label>StagingBrokerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>