unpackaged/main/default/objects/IdeaFinancialAPISettings__c/fields/StagingClientId__c.field-meta.xml
<CustomField>
    <fullName>StagingClientId__c</fullName>
    <label>StagingClientId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>