unpackaged/main/default/objects/IdeaFinancialAPISettings__c/fields/StagingClientSecret__c.field-meta.xml
<CustomField>
    <fullName>StagingClientSecret__c</fullName>
    <label>StagingClientSecret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>