unpackaged/main/default/objects/IdeaFinancialAPISettings__c/fields/StagingTokenUserName__c.field-meta.xml
<CustomField>
    <fullName>StagingTokenUserName__c</fullName>
    <label>StagingTokenUserName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>