unpackaged/main/default/objects/IdeaFinancialAPISettings__c/fields/TokenPassword__c.field-meta.xml
<CustomField>
    <fullName>TokenPassword__c</fullName>
    <label>TokenPassword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>