unpackaged/main/default/objects/IdeaFinancialAPISettings__c/fields/TokenUserName__c.field-meta.xml
<CustomField>
    <fullName>TokenUserName__c</fullName>
    <label>TokenUserName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>